// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on VOTE_ON_POST_PENDING when myVote is false increments votesTotal and updates myVote if isUpvote is true 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": 7,
    "path": Array [
      "Post",
      "itemsById",
      "1",
      "votesTotal",
    ],
    "rhs": 8,
  },
  DiffEdit {
    "kind": "E",
    "lhs": false,
    "path": Array [
      "Post",
      "itemsById",
      "1",
      "myVote",
    ],
    "rhs": true,
  },
]
`;

exports[`on VOTE_ON_POST_PENDING when myVote is true decrements votesTotal and updates myVote if isUpvote is false 1`] = `
Array [
  DiffEdit {
    "kind": "E",
    "lhs": 4,
    "path": Array [
      "Post",
      "itemsById",
      "2",
      "votesTotal",
    ],
    "rhs": 3,
  },
  DiffEdit {
    "kind": "E",
    "lhs": true,
    "path": Array [
      "Post",
      "itemsById",
      "2",
      "myVote",
    ],
    "rhs": false,
  },
]
`;
